--- a/gradle.properties
+++ b/gradle.properties
@@ -16,16 +16,10 @@
 group=com.osmerion.omittable
 version=0.6.0
 
-kotlin.js.yarn=false
-kotlin.native.ignoreDisabledTargets=true
-kotlin.stdlib.default.dependency=false
-
 org.gradle.caching=true
 org.gradle.configuration-cache=false
-# org.gradle.configuration-cache.parallel=true
-org.gradle.jvmargs=-XX:MaxMetaspaceSize=512m
+org.gradle.configuration-cache.parallel=true
 org.gradle.parallel=true
 org.gradle.welcome=never
 
 systemProp.file.encoding=utf-8
-systemProp.org.gradle.java.compile-classpath-packaging=true
