build: actually disable major updates for Spring Boot on backport branches

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -11,7 +11,7 @@
             matchBaseBranches: ["/^release/.*/"],
             matchPackageNames: ["org.springframework.boot:**"],
             matchUpdateTypes: ["major"],
-            enabled: true
+            enabled: false
         }
     ]
 }
